--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -19,10 +19,23 @@
             android:layout_height="90dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
             android:contentDescription="@string/imgProfile"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
+
+        <ImageView
+            android:id="@+id/settings"
+            android:layout_width="31dp"
+            android:layout_height="31dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/imgArticle"
+            android:src="@drawable/ic_baseline_settings_24"
+            app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
+            app:layout_constraintEnd_toEndOf="@+id/btnEditProfile"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tvName" />
 
         <TextView
             android:id="@+id/tvName"
@@ -53,7 +66,7 @@
             android:layout_width="122dp"
             android:layout_height="37dp"
             android:layout_alignTop="@+id/tvName"
-            android:layout_marginStart="152dp"
+            android:layout_marginStart="156dp"
             android:layout_marginTop="64dp"
             android:layout_toEndOf="@+id/imgProfile"
             android:backgroundTint="?attr/colorOnSurface"
@@ -62,8 +75,10 @@
             android:textAllCaps="false"
             android:textColor="?attr/colorSurface"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.157"
             app:layout_constraintStart_toEndOf="@+id/imgProfile"
-            app:layout_constraintTop_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvIOT"
@@ -113,6 +128,5 @@
             app:layout_constraintTop_toBottomOf="@+id/tvNameIOT"
             tools:layout_editor_absoluteX="0dp"
             tools:listitem="@layout/item_row_parameter" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
