--- a/app/src/main/res/layout/item_row_parameter.xml
+++ b/app/src/main/res/layout/item_row_parameter.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_view"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="62dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="20dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="24dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,65 +14,68 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/img_parameter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/iv_image_parameter"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/imgWarning"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/tittle_parameter"
-            android:layout_width="0dp"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_tittle_parameter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/img_parameter"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/iv_image_parameter"
+            android:textAppearance="?attr/textAppearanceListItem"
             android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp"
             android:textStyle="bold"
-            card_view:layout_constraintEnd_toStartOf="@+id/constraintLayout"
-            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
-            card_view:layout_constraintTop_toTopOf="@+id/img_parameter"
+            app:layout_constraintStart_toEndOf="@+id/iv_image_parameter"
+            app:layout_constraintTop_toTopOf="@+id/iv_image_parameter"
             tools:text="@string/title_parameter" />
 
-        <TextView
-            android:id="@+id/detail_parameter"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_detail_parameter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/img_parameter"
-            android:textSize="14sp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/img_parameter"
-            card_view:layout_constraintEnd_toStartOf="@+id/constraintLayout"
-            card_view:layout_constraintHorizontal_bias="0.11"
-            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@id/iv_image_parameter"
+            android:maxLines="2"
+            android:textAppearance="?attr/textAppearanceListItemSecondary"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
+            app:layout_constraintStart_toStartOf="@+id/tv_tittle_parameter"
+            app:layout_constraintTop_toBottomOf="@+id/tv_tittle_parameter"
             tools:text="@string/detail_parameter" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:background="@drawable/green_banner"
-            card_view:layout_constraintBottom_toBottomOf="@+id/img_parameter"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toEndOf="@+id/img_parameter"
-            card_view:layout_constraintTop_toTopOf="@+id/img_parameter">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/parameter_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:clickable="false"
+            android:focusable="false"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            app:cornerRadius="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_image_parameter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="@+id/iv_image_parameter" />
 
-            <TextView
-                android:id="@+id/tv_percent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorSurface"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/percent" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.65" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
