--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -1,132 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_IOT"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.iot.IOTFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imgProfile"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginStart="24dp"
+            android:id="@+id/iv_profile_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/imgProfile"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
-
-        <ImageView
-            android:id="@+id/settings"
-            android:layout_width="31dp"
-            android:layout_height="31dp"
-            android:layout_marginBottom="16dp"
-            android:contentDescription="@string/imgArticle"
-            android:src="@drawable/ic_baseline_settings_24"
-            app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
-            app:layout_constraintEnd_toEndOf="@+id/btnEditProfile"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/tvName" />
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imgProfile"
-            app:layout_constraintTop_toTopOf="@+id/imgProfile"
-            tools:text="@string/name_example" />
-
-        <TextView
-            android:id="@+id/tvAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:textColor="?attr/colorOnSurface"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/imgProfile"
-            app:layout_constraintTop_toBottomOf="@+id/tvName"
-            tools:text="@string/address_example" />
-
-        <Button
-            android:id="@+id/btnEditProfile"
-            android:layout_width="122dp"
-            android:layout_height="37dp"
-            android:layout_alignTop="@+id/tvName"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="64dp"
-            android:layout_toEndOf="@+id/imgProfile"
-            android:backgroundTint="?attr/colorOnSurface"
-            android:text="@string/editProfile"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="?attr/colorSurface"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.157"
-            app:layout_constraintStart_toEndOf="@+id/imgProfile"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvIOT"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_profile_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/name_example"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="?attr/colorOnSurface"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
+            app:layout_constraintTop_toTopOf="@+id/iv_profile_image" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_profile_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:text="@string/address_example"
+            android:textAppearance="?attr/textAppearanceListItemSecondary"
+            android:textColor="?attr/colorOnSurface"
+            app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_profile_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="@string/editProfile"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_iot_sensor_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/tvIOTResult"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
-            tools:text="@string/tvIOTResult" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_profile_edit" />
 
         <ImageView
-            android:id="@+id/imgIOT"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/iv_iot_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp"
             android:contentDescription="@string/imgIOT"
-            app:layout_constraintEnd_toEndOf="@+id/tvIOT"
-            app:layout_constraintStart_toStartOf="@+id/tvIOT"
-            app:layout_constraintTop_toBottomOf="@+id/tvIOT"
-            tools:src="@tools:sample/avatars" />
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_iot_sensor_result" />
 
-        <TextView
-            android:id="@+id/tvNameIOT"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_name_iot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
+            android:text="@string/tvNameIOT"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imgIOT"
-            app:layout_constraintStart_toStartOf="@+id/imgIOT"
-            app:layout_constraintTop_toBottomOf="@+id/imgIOT"
-            tools:text="@string/tvNameIOT" />
+            app:layout_constraintStart_toStartOf="@+id/iv_iot_result"
+            app:layout_constraintTop_toBottomOf="@+id/iv_iot_result" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_parameter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvNameIOT"
-            tools:layout_editor_absoluteX="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name_iot"
+            tools:itemCount="3"
             tools:listitem="@layout/item_row_parameter" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
