--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -11,6 +11,17 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/settings"
+            android:layout_width="31dp"
+            android:layout_height="31dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="@string/imgArticle"
+            android:src="@drawable/ic_baseline_settings_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/iv_profile_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
